# LatexPreprocessor

./: .gitignore  CMakeLists.txt  LICENSE.txt  LatexPreprocessor.sln  LatexPreprocessor.vcxproj  LatexPreprocessor.vcxproj.filters  README.md
config/: config.json  dynamic_macro.json  macros.json
include/: cli_utils.h  converter.h  error_collector.h  file_utils.h  macro_handler.h  macro_utils.h  preprocessor.h  source_line.h  test_helper.h  test_runner.h
latex_docs/: Text.tex  include_content.tex  komplex.tex  recursive_content.tex  test_cyclic_include.tex  test_input.tex
output/: output.tex  test_output.aux  test_output.tex
src/: cli_utils.cpp  converter.cpp  file_utils.cpp  macro_handler.cpp  macro_utils.cpp  main.cpp  preprocessor.cpp
tests/: test_conditionals.cpp  test_defines.cpp  test_format_macro.cpp  test_include.cpp  test_replace_text_macros.cpp  test_runner.cpp  test_runner.h
